[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="SpeechLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.166077
margin_bottom = 0.166077
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -177.5
margin_right = 126.0
margin_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="label" type="Label" parent="players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 229.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Lobby"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="ItemList" parent="players"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="connect" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.505716
anchor_right = 0.5
anchor_bottom = 0.505716
margin_left = -138.5
margin_top = -83.5
margin_right = 138.5
margin_bottom = 83.5
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_label" type="Label" parent="connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip_label" type="Label" parent="connect"]
margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_only" type="CheckBox" parent="connect"]
margin_left = 12.0
margin_top = 111.0
margin_right = 114.0
margin_bottom = 135.0
text = "Server Only"

[node name="error_label" type="Label" parent="connect"]
margin_left = 15.0
margin_top = 135.0
margin_right = 257.0
margin_bottom = 149.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error" type="AcceptDialog" parent="."]
visible = true
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]
